frontend/style.css
/* Set global font, background color, and remove default margins */
body {
    font-family: "Inter", sans-serif; /* main font */
    background-color: #f5f5f5; /* light background */
    margin: 0;
    padding: 0;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 25px;
}

header .title {
    font-weight: 700;
    font-size: 36px;
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;
}

#board{
    display: flex;
    flex-direction: column;   /* rows stacked vertically */
    gap: 10px;                /* space between rows */
}

.row {
    display: flex;          /* Put elements next to each other */
    gap: 5px;              /* Space between cells */
}

.tile{
    width: 65px;
    height: 65px;
    border: 2px solid #d3d6da;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 32px;
    font-weight: 700;
    text-transform: uppercase;
    margin: 0 5px;
}

